--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ install:
     - pip install flake8
     - pip install nose
 script:
-    - flake8
+    - flake8 polygamy
     - python setup.py install
