--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,20 @@
+# Config file for automatic testing at travis-ci.org
+
 language: python
+
 python:
-    - "2.7"
-    - "3.3"
+  - "3.4"
+  - "3.3"
+  - "2.7"
 
 install:
-    - pip install flake8
-    - pip install nose
+    - pip install coveralls
+    - pip install -r requirements-testing.txt
+
+# command to run tests, e.g. python setup.py test
 script:
-    - flake8 polygamy
-    - python setup.py install
+    - coverage run --source nose_watcher setup.py test
+    - flake8
+
+after_success:
+      coveralls
