--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,10 @@ python:
   - "3.3"
   - "2.7"
 
-install:
-    - pip install coveralls
-    - pip install -r requirements-testing.txt
+# command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
+install: pip install -r requirements-testing.txt
 
 # command to run tests, e.g. python setup.py test
 script:
-    - coverage run --source nose_watcher setup.py test
+    - python setup.py test
     - flake8
-
-after_success:
-      coveralls
